--- a/skills/binomial-dist.html
+++ b/skills/binomial-dist.html
@@ -9,6 +9,8 @@
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body onload="writeOutline('probstats', 'Binomial Distribution')">
     <div include-html='/header.html' src='/js/index.js'></div>
@@ -22,23 +24,24 @@
         
         <div class='content'>
             <h1>Binomial Distribution</h1>
-            <div class='definition'>
+            <!-- <div class='definition'> -->
                 <div class="process" id="p1">
                     <p class="process-label" onclick="loadExample('ex1','p1')">Binomial Distribution</p>
-                    <p>Conduct a series of <i>n</i> Bernoulli trials (those resulting in either success or failure, independent of each other, with constant probability p of success, 0 &lt; p &lt; 1).</p>
-                    <p>Random variable X = # of successes after <i>n</i> trials</p>
-                    <p>probability mass function: f(x) = C(n, x)p<sup>x</sup>(1 - p)<sup>n-x</sup><br>x = 0, 1, ..., n</p>
+                    <p>Conduct a series of \(n\) Bernoulli trials (those resulting in either success or failure, independent of each other, with constant probability \(p\) of success, 0 \(\lt p \lt 1\)).</p>
+                    <p>Random variable \(X\) = # of successes after \(n\) trials</p>
+                    <p>probability mass function: \(P(X=x) = f(x) = \left( \begin{array}{c} n \\ x \end{array} \right)p^x(1 - p)^{n-x}\)</p>
+                    <p>\(x = 0, 1, ..., n\)</p>
                 </div>
-                <div class="process example" id="ex1">
-                    <!-- <p class="process-label">Example</p> -->
+                <!-- <div class="process example" id="ex1">
+                    <p class="process-label">Example</p>
                     <p>Shaq's free throw percentage <i>p</i> is 0.527 (he makes 52.7% of free throws).</p>
                 </div>
-            </div>
+            </div> -->
             <div class="process">
                 <p class="process-label">Binomial Mean & Variance</p>
-                <p>Given a binomial random variable X with probability <i>p</i> of success and <i>n</i> trials:</p>
-                <p>mean, &mu; = E(X) = np</p>
-                <p>variance, &sigma;<sup>2</sup> = V(X) = np(1 - p)</p>
+                <p>Given a binomial random variable \(X\) with probability \(p\) of success and \(n\) trials:</p>
+                <p>mean, \(\mu = E(X) = np\)</p>
+                <p>variance, \(\sigma^2 = V(X) = np(1 - p)\)</p>
             </div>
         </div>
     </div>
