--- a/skills/geometric-negbin-dist.html
+++ b/skills/geometric-negbin-dist.html
@@ -59,7 +59,7 @@
                     <p>Given a negative binomial random variable X with probability p of success and <i>r</i> successes:</p>
                     <p>mean, \(\mu = E(X) = {r \over p}\)</p>
                     <p>variance, \(\sigma^2 = V(X) = {r(1 - p) \over p^2}\)</p>
-                    <p>Note that all geometric formulas are just negative binomial formulas plugging in 1 for \(r\), as expected!</p>
+                    <p>Note that all geometric formulas are just negative binomial formulas but plugging in 1 for \(r\), as expected!</p>
                 </div>
             <!-- </div> -->
         </div>
