--- a/skills/poisson-dist.html
+++ b/skills/poisson-dist.html
@@ -9,6 +9,8 @@
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body onload="writeOutline('probstats', 'Poisson Distribution')">
     <div include-html='/header.html' src='/js/index.js'></div>
@@ -24,29 +26,29 @@
             <h1>Poisson Distribution</h1>
             <div class="process">
                 <p class="process-label">Poisson Process</p>
-                <p>Poisson process: Consists of small intervals &Delta;t. As &Delta;t tends to 0,</p>
+                <p>Poisson process: Consists of small intervals \(\Delta t\). As \(\Delta t\) tends to 0,</p>
                 <p>1. The probability of more than one event in the subinterval tends to 0.</p>
-                <p>2. The probability of one event in the subinterval tends to &lambda;&Delta;t.</p>
+                <p>2. The probability of one event in the subinterval tends to \(\lambda \Delta t\).</p>
                 <p>3. Events within subintervals are independent of those in other subintervals.</p>
             </div>
-            <div class='definition'>
+            <!-- <div class='definition'> -->
                 <div class="process" id="p1">
                     <p class="process-label" onclick="loadExample('ex1','p1')">Poisson Distribution</p>
-                    <p>Random variable X: # of events in a Poisson process</p>
-                    <p>Given 0 &lt; &lambda; and T as the length, </p>
-                    <p class="addendum">probability mass function: f(x) = e<sup>-&lambda;T</sup>(&lambda;T)<sup>x</sup>/x!</p>
-                    <p class="addendum">x = 0, 1, 2, ...</p>
+                    <p>Random variable \(X\): # of events in a Poisson process</p>
+                    <p>Given \(0 \lt \lambda \) and \(T\) as the length, </p>
+                    <p>probability mass function: \(P(X=x) = f(x) = e^{-\lambda T} {(\lambda T)^x \over x!}\)</p>
+                    <p class="addendum">\(x = 0, 1, 2, ...\)</p>
                 </div>
-                <div class="process example" id="ex1">
-                    <!-- <p class="process-label">Example</p> -->
+                <!-- <div class="process example" id="ex1">
+                    <p class="process-label">Example</p>
                     <p>Shaq's free throw percentage <i>p</i> is 0.527 (he makes 52.7% of free throws).</p>
                 </div>
-            </div>
+            </div> -->
             <div class="process">
                 <p class="process-label">Poisson Mean & Variance</p>
-                <p>Given a Poisson random variable X over interval of length T with parameter &lambda;:</p>
-                <p>mean, &mu; = E(X) = &lambda;T</p>
-                <p>variance, &sigma;<sup>2</sup> = V(X) = &lambda;T</p>
+                <p>Given a Poisson random variable \(X\) over interval of length \(T\) with parameter \(\lambda\):</p>
+                <p>mean, \(\mu = E(X) = \lambda T\)</p>
+                <p>variance, \(\sigma^2 = V(X) = \lambda T\)</p>
             </div>
         </div>
     </div>
