--- a/topics/areas.html
+++ b/topics/areas.html
@@ -51,7 +51,7 @@
           <a class="card" id="u">Classical Mechanics</a>
           <a class="card" id="u">Quantum Mechanics</a>
           <a class="card" id="u">Cosmology</a>
-          <a class='card' href='chemistry.html' id="u">Chemistry</a>
+          <a class='card' href='chemistry.html' id="">Chemistry</a>
           <a class="card" id="u">Organic Chemistry</a>
           <a class='card' id='u'>Biology</a>
           <a class='card' id='u'>Astronomy</a>
