--- a/topics/combinatorics.html
+++ b/topics/combinatorics.html
@@ -10,7 +10,7 @@
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
 </head>
-<body onload="writeOutline('combinatorics', 'area'); writeOutline('areas','Combinatorics')">
+<body onload="setTopic('combinatorics'); writeOutline('area', 'Combinatorics');">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
