--- a/topics/phys-classical.html
+++ b/topics/phys-classical.html
@@ -10,13 +10,13 @@
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
 </head>
-<body onload="writeOutline('physClassical', 'area'); writeOutline('areas','Classical Physics')">
+<body  onload="setTopic('physClassical'); writeOutline('area', 'Classical Physics')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
 
-            <span class='tab formsci' id="tab" onclick="openOutline()">&#x25c0;</span>
+            <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
