--- a/topics/probstats.html
+++ b/topics/probstats.html
@@ -10,7 +10,7 @@
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
   </head>
-  <body onload="writeOutline('probstats', 'area'); writeOutline('areas','Probability & Statistics')">
+  <body  onload="setTopic('probstats'); writeOutline('area', 'Probability & Statistics')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
