--- a/topics/areas.html
+++ b/topics/areas.html
@@ -46,7 +46,7 @@
       <div class="process natsci">
         <p class='process-label' id="">Natural Science</p>
         <div class='cards' id="">
-          <a class='card' href='phys-classical.html'>Classical Physics</a>
+          <a class='card' href='physClassical.html'>Classical Physics</a>
           <a class='card' id='u'>Modern Physics</a>
           <a class="card" id="u">Classical Mechanics</a>
           <a class="card" id="u">Quantum Mechanics</a>
