--- a/skills/uc-disk.html
+++ b/skills/uc-disk.html
@@ -18,7 +18,7 @@
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
 
-            <span class='tab formsci' id="tab" onclick="openOutline()">&#x25c0;</span>
+            <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
