--- a/topics/areas.html
+++ b/topics/areas.html
@@ -22,6 +22,7 @@
           <a class="card" id="u">Number Theory</a>
           <a class="card" id="u">Algebra</a>
           <a class="card" id="u">Geometry</a>
+          <a class="card" href="precalc.html" id="">Precalculus</a>
           <a class='card' id="u">Calculus</a>
           <a class='card' id="u">Linear Algebra</a>
           <a class='card' href='diffeq.html' id="u">Differential Equations</a>
