--- a/topics/areas.html
+++ b/topics/areas.html
@@ -31,15 +31,15 @@
         </div>
       </div> 
       <div class="process formsci" id="">
-        <p class='process-label' id='u'>Computer Science</p>
-        <div class='cards' id='u'>
-          <a class='card' href='computer-org.html'>Computer Organization & Structure</a>
+        <p class='process-label' id=''>Computer Science</p>
+        <div class='cards' id=''>
+          <a class='card' id="u" href='computer-org.html'>Computer Organization & Structure</a>
           <a class='card' id="u">Systems & Networks</a>
           <a class='card' href='data-structures-algorithms.html' id="u">Data Structures & Algorithms</a>
-          <a class='card' href='webdev.html'>Web Development</a>
+          <a class='card' id="u" href='webdev.html'>Web Development</a>
           <a class='card' id="u">Python</a>
           <a class='card' id="u">Java</a>
-          <a class='card' href="c.html" id="u">C</a>
+          <a class='card' href="c.html" id="">C</a>
           <a class="card" id="u">C++</a>
           <a class="card" id="u">C#</a>
         </div>
