--- a/topics/areas.html
+++ b/topics/areas.html
@@ -39,7 +39,7 @@
           <a class='card' id="u" href='webdev.html'>Web Development</a>
           <a class='card' id="u">Python</a>
           <a class='card' id="u">Java</a>
-          <a class='card' href="c.html" id="">C</a>
+          <a class='card' href="C.html" id="">C</a>
           <a class="card" id="u">C++</a>
           <a class="card" id="u">C#</a>
         </div>
