--- a/skills/int-partitions.html
+++ b/skills/int-partitions.html
@@ -49,7 +49,7 @@
             <!-- <div class='definition'> -->
                 <div class="process" id="p3">
                     <p class="process-label">Generating Function for Number of Partitions</p>
-                    <p>For a positive integer \(n\), the generating function for the number of partitions is $$f(x)={1 \over 1+x}{1 \over 1+x^2}{1 \over 1+x^3}...{1 \over 1+x^n} = \prod_{i=1}^n {1 \over (1-x)^i}$$</p>
+                    <p>For a positive integer \(n\), the generating function for the number of partitions is $$f(x)={1 \over 1+x}{1 \over 1+x^2}{1 \over 1+x^3}...{1 \over 1+x^n}$$$$ = \prod_{i=1}^n {1 \over (1-x)^i}$$</p>
                 </div>
                 <!-- <div class="process example" id="ex3">
                     <p class="process-label">Example</p>
