--- a/skills/si-units.html
+++ b/skills/si-units.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
 </head>
-<body onload="writeOutline('physClassical')">
+<body onload="writeOutline('areas', 'SI Units')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
