--- a/topics/compArch.html
+++ b/topics/compArch.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Organization & Structure</title>
+    <title>Computer Architecture</title>
     <link rel='icon' href='/imgs/sl-logo.png'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
 </head>
-<body onload="writeOutline('compOrgStr', 'area');writeOutline('areas', 'Computer Organization & Structure')">
+<body  onload="setTopic('compArch'); writeOutline('area', 'Computer Architecture')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
