--- a/topics/areas.html
+++ b/topics/areas.html
@@ -18,12 +18,17 @@
       <div class="process formsci" style="padding-bottom:0">
         <p class='process-label'>Mathematics</p>
         <div class='cards' style="margin-bottom:0">
+          <a class="card" id="u">Arithmetic</a>
           <a class='card' href='discrete-math.html' id="u">Discrete Mathematics</a>
           <a class="card" id="u">Number Theory</a>
-          <a class="card" id="u">Algebra</a>
-          <a class="card" id="u">Geometry</a>
-          <a class="card" href="precalc.html" id="">Precalculus</a>
-          <a class='card' id="u">Calculus</a>
+          <a class="card" id="u">Algebra I</a>
+          <a class="card" id="u">Algebra II</a>
+          <a class="card" id="u">Euclidean Geometry</a>
+          <a class="card" href="precalc.html" id="u">Precalculus</a>
+          <a class='card' href="calc-diff.html" id="u">Differential Calculus</a>
+          <a class="card" id="u">Integral Calculus</a>
+          <a class="card" id="u">Multivariable Calculus</a>
+          <a class="card" id="u">Differential Equations</a>
           <a class='card' id="u">Linear Algebra</a>
           <a class='card' href='diffeq.html' id="u">Differential Equations</a>
           <a class='card' href='combinatorics.html'>Combinatorics</a>
@@ -33,26 +38,26 @@
       <div class="process formsci" id="">
         <p class='process-label' id=''>Computer Science</p>
         <div class='cards' id=''>
-          <a class='card' id="u" href='computer-org.html'>Computer Organization & Structure</a>
+          <a class='card' id="" href='compArch.html'>Computer Architecture</a>
           <a class='card' id="u">Systems & Networks</a>
           <a class='card' href='data-structures-algorithms.html' id="u">Data Structures & Algorithms</a>
-          <a class='card' id="u" href='webdev.html'>Web Development</a>
-          <a class='card' id="u">Python</a>
-          <a class='card' id="u">Java</a>
           <a class='card' href="C.html" id="">C</a>
           <a class="card" id="u">C++</a>
           <a class="card" id="u">C#</a>
+          <a class='card' id="u">Java</a>
+          <a class='card' id="u">Python</a>
+          <a class='card' id="" href='webdev.html'>Web Development</a>
         </div>
       </div>
       <div class="process natsci">
         <p class='process-label' id="">Natural Science</p>
         <div class='cards' id="">
-          <a class='card' href='physClassical.html'>Classical Physics</a>
-          <a class='card' id='u'>Modern Physics</a>
           <a class="card" id="u">Classical Mechanics</a>
+          <a class='card' href='emag.html'>Electricity & Magnetism</a>
+          <a class='card' id='u'>Modern Physics</a>
           <a class="card" id="u">Quantum Mechanics</a>
           <a class="card" id="u">Cosmology</a>
-          <a class='card' href='chemistry.html' id="">Chemistry</a>
+          <a class='card' href='chemistry.html' id="u">General Chemistry</a>
           <a class="card" id="u">Organic Chemistry</a>
           <a class='card' id='u'>Biology</a>
           <a class='card' id='u'>Astronomy</a>
@@ -62,8 +67,9 @@
       <div class="process socsci">
         <p class='process-label' id='u'>Social Science</p>
         <div class='cards' id='u'>
-          <a class='card'>Psychology</a>
-          <a class='card'>Economics</a>
+          <a class='card'>General Psychology</a>
+          <a class='card'>Microeconomics</a>
+          <a class="card">Macroeconomics</a>
           <a class='card'>Politics</a>
           <a class='card'>Sociology</a>
         </div>  
@@ -71,11 +77,13 @@
       <div class="process humanities">
         <p class='process-label' id="u">Humanities</p>
         <div class='cards' id="u">
-          <a class='card' id='u'>English Language</a>
-          <a class='card' href='music-theory.html'>Music Theory</a>
+          <a class='card' id=''>English Language</a>
+          <a class="card">World History</a>
+          <a class="card">U.S. History</a>
+          <a class='card' href='music-theory.html' id="">Music Theory</a>
           <a class='card' id='u'>Visual Arts</a>
-          <a class='card' id='u'>Philosophy</a>
-          <a class='card' id='u'>Religion</a>
+          <a class='card' id=''>Philosophy</a>
+          <a class='card' id=''>Religion</a>
         </div>
       </div>
   </div>
